--- a/winch/web/www/index.html
+++ b/winch/web/www/index.html
@@ -6,11 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="scripts/angular.js"></script>
-        <script src="scripts/angular-route.js"></script>
-        <script src="scripts/angular-animate.js"></script>
-
-        <link href="styles/basic.css" rel="stylesheet"/>
+        <link href="styles/cloak.css" rel="stylesheet"/>
+        <link href="styles/winch.css" rel="stylesheet"/>
     </head>
     <body x-ng-cloak>
         <div id="header">
@@ -22,5 +19,14 @@
 
         <div id="footer">
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-animate.min.js"></script>
+
+        <script src"app/winch.js"></script>
+        <script src"app/controllers/DefaultController.js"></script>
+        <script src"app/controllers/LoginController.js"></script>
+        <script src"app/controllers/BoardController.js"></script>
     </body>
 </html>
